# filefinder-rewritten

./: .client_secrets.encrypt  .gitignore  Cargo.toml  MODULES.md  README.md  debug  install_modules.py  main.py  main.pybak  requirements.txt  sd  test  test.py
GUI/: gtk.py  gtk_future.py  gtk_legacy.py  test.py  xd.py
GUI/.FRONTEND/: gui.ui
modules/: configs.json  exts.json  funcs.py  funcs.py.bak  gtk.py  libupd.py  repo.json
src/: main.rs
src/modules/: exts.json  finder.rs
tests/: client_secrets.json  test.py  test2.py
