[package]
name = "finder-port"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
structopt = "0.3.26"
walkdir = "2.3.3"
zip = "0.6.4"

[[bin]]
name = "finder-port"
path = "src/main.rs"
